# agentic-eval

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
eval/: __init__.py  benchmark.py  demo.py  ollama_smoke.py
eval/api/: main.py  report_cleanup.py  report_store.py  state.py
eval/api/routers/: benchmark.py  cases.py  config.py  results.py  sse.py
eval/core/: __init__.py  config.py  exceptions.py  runtime_config.py  schemas.py
eval/evaluators/: __init__.py  _utils.py  answer_relevance.py  composite.py  consistency.py  context_precision.py  embeddings.py  faithfulness.py  latency_quality.py
eval/judge/: __init__.py  client.py  parsers.py  prompts.py
eval/reporters/: html_reporter.py  json_reporter.py  terminal_reporter.py
eval/runners/: __init__.py  api_runner.py  base_runner.py  direct_runner.py  mock_runner.py  ollama_runner.py  platform_runner.py
prototype/: agentic-eval-ui.html
test_cases/billing_dispute/: BD-001_eligible_dispute.yaml  BD-002_ineligible_amount.yaml  BD-003_repeat_dispute.yaml
test_cases/churn_prevention/: CP-001_high_churn_signal.yaml  CP-002_low_engagement.yaml  CP-003_nps_drop.yaml
test_cases/payment_risk/: PR-001_high_risk_crm_degraded.yaml  PR-002_high_risk_full_context.yaml  PR-003_low_risk_standard.yaml  PR-004_medium_risk_partial.yaml  PR-005_edge_utilization_boundary.yaml
tests/: conftest.py
tests/integration/: test_composite_eval.py  test_full_benchmark.py  test_ollama_local.py  test_runners.py
tests/unit/: test_answer_relevance.py  test_composite.py  test_consistency.py  test_context_precision.py  test_faithfulness.py  test_judge_prompts.py  test_latency_quality.py  test_report_cleanup.py  test_schemas.py
ui/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/api/: client.ts  types.ts
ui/src/components/: ConsistencyView.tsx  DimensionBadge.tsx  LatencyChart.tsx  LiveEvalLog.tsx  ScoreGauge.tsx
ui/src/hooks/: useBenchmarkEvents.ts  useEvalStore.ts
ui/src/pages/: About.tsx  Architecture.tsx  BenchmarkRunner.tsx  (+5 more)
(+1 files in other folders)
