[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic-eval"
version = "0.1.0"
description = "Evaluation framework for LLM-powered agentic systems — faithfulness, relevance, precision, consistency, and latency/quality tradeoff"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Sarala Biswal" }]

dependencies = [
    # Core
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # Async HTTP
    "httpx>=0.27.0",

    # Evaluation frameworks
    "ragas>=0.1.14",
    "deepeval>=0.21.0",

    # Embeddings (local, no API key)
    "sentence-transformers>=3.0.1",
    "torch>=2.3.0",

    # LLM client
    "litellm>=1.40.0",
    "openai>=1.30.0",

    # Data
    "numpy>=1.26.4",
    "scipy>=1.13.1",
    "pandas>=2.2.2",

    # Reporting
    "jinja2>=3.1.4",
    "plotly>=5.22.0",
    "rich>=13.7.1",

    # API
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "sse-starlette>=2.1.0",

    # Config
    "pyyaml>=6.0.1",

    # Observability
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "factory-boy>=3.3.0",
    "faker>=25.8.0",
    "respx>=0.21.1",
    "mypy>=1.10.0",
    "ruff>=0.4.9",
    "types-pyyaml>=6.0.12",
]

[project.scripts]
demo = "eval.demo:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "--cov=eval",
    "--cov-report=term-missing",
    "--cov-fail-under=75",
    "-v",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "ANN", "SIM"]
ignore = ["ANN101", "ANN102", "ANN401", "B008"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]

[tool.hatch.build.targets.wheel]
packages = ["eval"]
